--- a/app/src/main/res/layout-hdpi/fragment_home_status_.xml
+++ b/app/src/main/res/layout-hdpi/fragment_home_status_.xml
@@ -40,13 +40,12 @@
 
             <TextView
                 android:id="@+id/weight"
-                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="79"
-                android:gravity="center"
                 android:layout_weight="1"
-                ></TextView>
+                android:gravity="center"
+                android:text="0"
+                android:textStyle="bold"></TextView>
 
             <TextView
                 android:layout_width="wrap_content"
