--- a/app/src/main/res/drawable/backgroud_status.xml
+++ b/app/src/main/res/drawable/backgroud_status.xml
@@ -5,9 +5,9 @@
 
     <gradient
         android:angle="90"
-        android:startColor="#b3b3b3"
+        android:startColor="#121821"
         android:centerColor="#273848"
-        android:endColor="#161e29"
+        android:endColor="#121821"
         android:type="linear">
     </gradient>
 
