--- a/app/src/main/res/layout-hdpi/fragment_home_status_.xml
+++ b/app/src/main/res/layout-hdpi/fragment_home_status_.xml
@@ -26,14 +26,15 @@
             android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="5dp"
             >
 
             <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="น้ำหนักวันนี้"
-                 android:textStyle="bold"
+                android:textColor="#ffffff"
+                android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"
            ></TextView>
@@ -44,6 +45,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:textColor="#ffffff"
                 android:text="0"
                 android:textStyle="bold"></TextView>
 
@@ -51,6 +53,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="kg"
+                android:textColor="#ffffff"
                 android:textStyle="bold"
                 android:gravity="center"
                 android:layout_weight="1"
@@ -77,6 +80,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="ระดับรับประทานอาหารตอนนี้"
+            android:textColor="#ffffff"
             android:layout_weight="1.3"
             android:paddingLeft="10dp"
             ></TextView>
@@ -84,6 +88,7 @@
                 android:id="@+id/Level_Eat_status"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="#ffffff"
                 android:text="ไม่มีข้อมูล"
                 android:layout_weight="1.5"
                 ></TextView>
@@ -100,6 +105,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="ปริมาณรับเเคลอรี่วันนี้"
+            android:textColor="#ffffff"
             android:paddingLeft="10dp"
             android:layout_weight="0.9"
             ></TextView>
@@ -108,6 +114,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="0"
+                android:textColor="#ffffff"
                 android:gravity="center"
                 android:layout_weight="1.5"
                 ></TextView>
@@ -115,6 +122,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="kcal"
+                android:textColor="#ffffff"
                 android:layout_weight="1.5"
                 ></TextView>
         </LinearLayout>
@@ -132,12 +140,14 @@
             android:layout_weight="0.9"
             android:paddingLeft="10dp"
             android:text="ปริมาณเเคลอรี่เผาผาญวันนี้"
+            android:textColor="#ffffff"
             ></TextView>
             <TextView
                 android:id="@+id/volume_Excercise_number"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="0"
+                android:textColor="#ffffff"
                 android:gravity="center"
                 android:layout_weight="1.5"
                 ></TextView>
@@ -145,6 +155,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="kcal"
+                android:textColor="#ffffff"
                 android:layout_weight="1.5"
                 ></TextView>
         </LinearLayout>
@@ -163,6 +174,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0.9"
                 android:paddingLeft="10dp"
+                android:textColor="#ffffff"
                 android:text="ปริมาณเเคลอรี่วันนี้"></TextView>
             <TextView
                 android:id="@+id/Total_volume_kcal_todate"
@@ -170,12 +182,14 @@
                 android:layout_height="wrap_content"
                 android:text="0"
                 android:gravity="center"
+                android:textColor="#ffffff"
                 android:layout_weight="1.5"
                 ></TextView>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="kcal"
+                android:textColor="#ffffff"
                 android:layout_weight="1.5"
                 ></TextView>
         </LinearLayout>
@@ -194,6 +208,7 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="20dp"
                 android:text=""
+                android:textColor="#ffffff"
                 android:visibility="invisible"
                ></TextView>
         </LinearLayout>
@@ -202,7 +217,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:layout_below="@+id/box1"
         android:background="@drawable/background_object"
         >
@@ -268,7 +283,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="ค่าปริมาณที่ใช้เเต่ละวัน"
-                    android:textColor="#000"
+                    android:textColor="#ffffff"
                     android:textSize="12dp"
                     ></TextView>
 
@@ -296,7 +311,7 @@
                     android:layout_height="wrap_content"
                     android:text="0"
                     android:layout_weight="1"
-                    android:textColor="#000"
+                    android:textColor="#ffffff"
                     android:gravity="center_horizontal"
                     android:textSize="20dp"
                     ></TextView>
@@ -307,7 +322,7 @@
                     android:text="kcal"
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
-                    android:textColor="#000"
+                    android:textColor="#ffffff"
                     android:textSize="20dp"
                     ></TextView>
             </LinearLayout>
@@ -335,7 +350,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="ค่าปริมาณพลังงานพื้นฐาน"
-                    android:textColor="#000"
+                    android:textColor="#ffffff"
                     android:textSize="12dp"
                     ></TextView>
 
@@ -363,7 +378,7 @@
                     android:layout_height="wrap_content"
                     android:text="0"
                     android:layout_weight="1"
-                    android:textColor="#000"
+                    android:textColor="#ffffff"
                     android:gravity="center_horizontal"
                     android:textSize="20dp"
                     ></TextView>
@@ -374,7 +389,7 @@
                     android:text="kcal"
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
-                    android:textColor="#000"
+                    android:textColor="#ffffff"
                     android:textSize="20dp"
                     ></TextView>
             </LinearLayout>
@@ -402,7 +417,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="ค่าดัชนีมวลกาย "
-                    android:textColor="#000"
+                    android:textColor="#ffffff"
                     android:textSize="12dp"
                     ></TextView>
 
@@ -431,12 +446,12 @@
                     android:layout_height="wrap_content"
                     android:text="0"
                     android:layout_weight="1"
-                    android:textColor="#000"
+                    android:textColor="#ffffff"
                     android:gravity="center_horizontal"
                     android:textSize="20dp"
                     ></TextView>
                 <TextView
-                    android:id="@+id/sssa"
+                    android:id="@+id/statusname"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="       "
@@ -557,7 +572,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/addfood"
-                android:text="เพิ่มรายการอาหาร"
+                android:text="เพิ่มอาหาร"
                 android:layout_weight="1"
                 android:layout_marginRight="20dp"
                 android:layout_marginLeft="20dp"
@@ -570,8 +585,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/addworkout"
                 android:layout_weight="1"
-                android:text="เพิ่มรายการกิจกกรรม"
-                android:textSize="13dp"
+                android:text="เพิ่มกิจกกรรม"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="20dp"
                 android:layout_marginLeft="20dp"
