--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
     <color name="myPeach">#ffffff</color>
     <color name="red">#262626</color>
     <color name="colorcarenda">#5252e0</color>
-    <color name="gray">#e6e6e6</color>
+    <color name="gray">#a6a6a6</color>
     <color name="oreng">#ff751a</color>
+
+    <color name="g"></color>
 </resources>
