--- a/app/src/main/res/layout/activity_list_edit_excercise.xml
+++ b/app/src/main/res/layout/activity_list_edit_excercise.xml
@@ -43,6 +43,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="วันที่"
+                android:textColor="#FFFFFF"
                 ></TextView>
 
             <TextView
@@ -50,6 +51,7 @@
                 android:layout_below="@+id/TVam"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="#FFFFFF"
                 android:text="เเคลทั้งหมด"
                 ></TextView>
         </LinearLayout>
@@ -68,6 +70,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="0"
+                android:textColor="#FFFFFF"
                 android:gravity="center_vertical"
                 ></TextView>
 
@@ -78,6 +81,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="0"
+                android:textColor="#FFFFFF"
                 android:gravity="center_vertical"
                 ></TextView>
         </LinearLayout>
@@ -104,6 +108,7 @@
                 android:layout_height="wrap_content"
               android:gravity="center_horizontal"
                 android:text="kcal"
+                android:textColor="#FFFFFF"
                 ></TextView>
         </LinearLayout>
 
