--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,5 @@
     <color name="gray">#a6a6a6</color>
     <color name="oreng">#ff751a</color>
 
-    <color name="g"></color>
+    <color name="g">#1b2432</color>
 </resources>
