--- a/app/src/main/res/layout/list_excercise.xml
+++ b/app/src/main/res/layout/list_excercise.xml
@@ -46,5 +46,5 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#FFFFFF" />
+        android:background="#b3b3b3" />
 </LinearLayout>
