--- a/app/src/main/res/layout/list_setting.xml
+++ b/app/src/main/res/layout/list_setting.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:paddingLeft="20dp"
             android:paddingBottom="10dp"
-            android:textColor="#000"
+            android:textColor="#ffffff"
             android:textSize="15dp"
             android:text="name"
             android:paddingTop="10dp"/>
@@ -44,7 +44,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#000"
+        android:background="#b3b3b3"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
         />
