--- a/app/src/main/res/layout/listselect_edit_excercise.xml
+++ b/app/src/main/res/layout/listselect_edit_excercise.xml
@@ -44,5 +44,5 @@ android:textColor="#FFFFFF"
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#FFFFFF" />
+        android:background="#b3b3b3" />
 </LinearLayout>
